--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jasurhaydarovcode/backend-hosting-api#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.1"
   },
   "devDependencies": {
